Almost finish detail page, remain borders

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,8 @@
     width: 100%;
     box-shadow: 5px -1px 2px 5px rgba(152,152,152,0.27);
     color: black;
+    position:relative;
+    z-index: 10;
 }
 
 .navbar-dark {
@@ -15,8 +17,10 @@
     height: 8vh;
     width: 100%;
     background-color: #2b3945;
-    box-shadow: 5px -1px 2px 5px rgba(152,152,152,0.27);
+    box-shadow: 5px -1px 2px 5px rgba(21, 21, 21, 0.257);
     color: white;
+    position:relative;
+    z-index: 10;
 }
 
 .moonIcon {
