--- a/src/components/CountryList/CountryList.css
+++ b/src/components/CountryList/CountryList.css
@@ -2,14 +2,73 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    padding-top: 2.3rem;
+    justify-content: space-between;
+    margin: 0 -20px;
 }
 
-.countryTile {
+.noStyle {
+    text-decoration: none;
+    color:inherit;
+}
+
+.countryTile-light {
     display: flex;
     flex-direction: column;
-    width: 200px;
+    align-items: flex-start;
+    width: 250px;
+    flex-shrink: 0;
+    margin: 20px;
+    border-radius: 7px;
+    overflow: hidden;
+    background-color: white;
+    box-shadow: 5px 5px 6px 1px #c3c3c390;
+    padding-bottom: 2rem;
+    cursor: pointer;
+    height: 280px;
+}
+
+.countryTile-dark {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 250px;
+    flex-shrink: 0;
+    margin: 20px;
+    border-radius: 7px;
+    overflow: hidden;
+    background-color: #2b3945;
+    box-shadow: 5px 5px 6px 1px rgba(21, 21, 21, 0.257);
+    padding-bottom: 2rem;
+    cursor: pointer;
 }
 
 .countryFlag {
+    height: 150px;
     width: 100%;
+}
+
+.flagImg {
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    object-fit: cover;
+}
+
+.countryName {
+    font-weight: 800;
+    padding: 1rem;
+    text-align: left;
+}
+
+.countryDetails {
+    font-weight: 600;
+    padding-left: 1rem;
+    font-size: 0.85rem;
+    line-height: 1.8;
+}
+
+.countryDetailsTitle {
+    font-weight: 800;
+    display:inline;
 }
