--- a/src/components/SearchFilter/SearchFilter.css
+++ b/src/components/SearchFilter/SearchFilter.css
@@ -46,6 +46,7 @@
 }
 
 .filterDropdown-light {
+    position: relative;
     background-color: white;
     box-shadow: 5px 5px 6px 1px #c3c3c390;
     border-radius: 8px;
@@ -57,6 +58,7 @@
 }
 
 .filterDropdown-dark {
+    position: relative;
     background-color: #2b3945;
     box-shadow: 5px 5px 6px 1px rgba(21, 21, 21, 0.257);
     border-radius: 8px;
@@ -70,4 +72,37 @@
 .dropdown-icon {
     cursor: pointer;
     margin-left: 3rem;
+}
+
+.dropdownList-light {
+    position:absolute;
+    width: 100%;
+    left: 0px;
+    bottom: -144px;
+    background-color: white;
+    box-shadow: 5px 5px 6px 1px #c3c3c390;
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0.8rem 0 0.5rem;
+}
+
+.dropdownList-dark {
+    position:absolute;
+    width: 100%;
+    left: 0px;
+    bottom: -144px;
+    background-color: #2b3945;
+    box-shadow: 5px 5px 6px 1px rgba(21, 21, 21, 0.257);
+    border-radius: 8px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0.8rem 0 0.5rem;
+}
+
+.countryFilter {
+    margin-left: 1rem;
+    margin-bottom: 0.3rem;
 }
