--- a/src/components/CountryList/CountryList.css
+++ b/src/components/CountryList/CountryList.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     padding-top: 2.3rem;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin: 0 -20px;
 }
 
